# AI-Agent-Refactoring-System

./: .dockerignore  .gitignore  CLAUDE.md  DevSpec.md  HANDOVER.md  README.md  RepoIngestion.md  api_test.py  api_test.sh  docker-compose.yml  project.md  pyproject.toml  run.sh  test.py  workspace
LegacyCode/: sensor.py  test_tire_pressure_monitoring.py
api/: main.py
api/ingestion/: deps.py  routes.py  schemas.py
artifacts/dd68231b14b341e7af54ed75c4cd1a1f/: run_meta.json
artifacts/dd68231b14b341e7af54ed75c4cd1a1f/snapshot/repo/: .pre-commit-config.yaml  pyproject.toml
artifacts/dd68231b14b341e7af54ed75c4cd1a1f/snapshot/repo/api/ingestion/: routes.py  schemas.py
artifacts/dd68231b14b341e7af54ed75c4cd1a1f/snapshot/repo/artifacts/7480c5f07c5f46e2bc540a7d10c02c88/: run_meta.json
artifacts/dd68231b14b341e7af54ed75c4cd1a1f/snapshot/repo/artifacts/f9a8f9f61caf458b9f22cdd838cb3992/snapshot/: repo.tar
artifacts/dd68231b14b341e7af54ed75c4cd1a1f/snapshot/repo/artifacts/f9a8f9f61caf458b9f22cdd838cb3992/snapshot/repo/: README.md  pyproject.toml
artifacts/dd68231b14b341e7af54ed75c4cd1a1f/snapshot/repo/docs/: ingestion_spec.md
artifacts/dd68231b14b341e7af54ed75c4cd1a1f/snapshot/repo/runner/: ingestion_main.py
artifacts/dd68231b14b341e7af54ed75c4cd1a1f/snapshot/repo/shared/: ingestion_types.py
artifacts/f9a8f9f61caf458b9f22cdd838cb3992/: run_meta.json
core/storage/: artifacts.py
docker/agent/: Dockerfile
docker/api/: Dockerfile
docker/sandbox/: Dockerfile  Dockerfile_Project_1  Dockerfile_Project_2  SANDBOX_SPEC.md
docs/: DepGraphUpdate.md  README_DOCKER.md  RepoIngestion.md  TODO.md  ingestion_spec.md
orchestrator/: agent.py  agent_tool_workflow.py  config.yaml  multi_agent.py  multi_agent_refactor.py  muti_agent_refactor_sandbox.py  sandbox.py  test.py
orchestrator/prompts/: architect.md  engineer.md
project1_workspace/refactor_repo/: Cargo.toml
project3_workspace/: final_report.md
project3_workspace/refactor_repo/: Dockerfile  build.gradle.kts  docker-compose.yml  sql_coverage_report.md
refactor/leaderboard/: coverage.out  go.mod  leaderboard.go  leaderboard_test.go
refactor/telemetry/: coverage.out  go.mod  (+2 more)
runner/: data_assets.py  depgraph.py  depgraph_filter.py  evidence.py  exec_matrix.py  exec_probe.py  indexer.py  ingestion_main.py  snapshot.py
scripts/: generate_schemas.py  smoke_real_repo.py  smoke_test_gen.py  test_e2e_characterization.py  test_pipeline.py  test_textconverter_stage1.py
shared/: DepGraphFilter.py  ingestion_types.py  test_types.py  utils.py
spec/: refactoring_plan.md  spec.md  stage_result.md
(+272 files in other folders)
