[project]
name = "tsmc-2026-hackathon"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "ruff>=0.14.14",
]

# -------------------------
# Ruff (lint + format)
# -------------------------
[tool.ruff]
line-length = 88
target-version = "py312"
select = ["E", "F", "I"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# -------------------------
# Mypy
# -------------------------
[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
